fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -484,7 +484,7 @@
     display: flex; 
     flex-direction: row; 
     text-align: center; 
-/*    width: 140px; */
+    width: 150px;   
     align-items: center;
 }
 .text-body{
